--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello, world</title>
+	<title>A whale of a greeting</title>
 </head>
 <body>
 I am Ravikumar
+<img src="images/breaching_whale.jpg">
 </body>
 </html>
 
