--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>A whale of a greeting</title>
 </head>
 <body>
-I am Ravikumar
-<img src="images/breaching_whale.jpg">
+	<h1>hello, world</h1>
+	<p>I am Ravikumar.</p>
+	<img src="images/breaching_whale.jpg"/>
 </body>
 </html>
 
